# hdac-sdk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  _keys_helper_with_file_8cpp.html  _keys_helper_with_file_8h_source.html  _keys_helper_with_rpc_8cpp.html  _keys_helper_with_rpc_8h_source.html  allocators_8h_source.html  amount_8h_source.html  analyzetx_8h_source.html  annotated.html  asset_8h_source.html  base58_8h_source.html  base64_8h_source.html  bitcoinaddress_8h_source.html  bitcoinsecret_8h_source.html  cif__rpccall_8h_source.html  class_bitnet_1_1_client_1_1_bitnet_client-members.html  class_bitnet_1_1_client_1_1_bitnet_client.html  class_c_auto_file-members.html  class_c_auto_file.html  class_c_base58_data-members.html  class_c_base58_data.html  class_c_bitcoin_address-members.html  class_c_bitcoin_address.html  class_c_bitcoin_secret-members.html  class_c_bitcoin_secret.html  class_c_buffered_file-members.html  class_c_buffered_file.html  class_c_connection_failed-members.html  class_c_connection_failed.html  class_c_data_stream-members.html  class_c_data_stream.html  class_c_fee_rate-members.html  class_c_fee_rate.html  class_c_flat_data-members.html  class_c_flat_data.html  (+552 more)
cBindTest/: CMakeLists.txt
cBindTest/src/: CMakeLists.txt  main.c
cmake/: FindJson-spirit.cmake  Findsecp256k1.cmake
common/: CMakeLists.txt
common/cmake/: external.cmake
common/include/hdac/keys/: keys_global.h  keyslib.h  pubkey.h
common/src/: CMakeLists.txt  key.cpp  keyslib.cpp  pubkey.cpp
crypto/: CMakeLists.txt
crypto/cmake/: external.cmake
crypto/include/crypto/: common.h  crypto.h  crypto_global.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
crypto/include/hdac/crypto/: crypto_global.h  sha1.h
crypto/src/: CMakeLists.txt  crypto.cpp  hmac_sha256.cpp  hmac_sha512.cpp  ripemd160.cpp  sha1.cpp  sha256.cpp  sha512.cpp
dotnet-lib/HdacSdk/: HdacSdk.sln
dotnet-lib/HdacSdk/HdacSdk/: Keys.cs
dotnet-lib/HdacSdkTest/: HdacSdkTest.sln
dotnet-lib/HdacSdkTest/HdacSdkTest/: HdacSdkTest.csproj  Program.cs
dotnet-lib/HdacSdkTest/HdacSdkTest/Properties/: AssemblyInfo.cs
entities/: CMakeLists.txt
entities/include/entities/: asset.h
entities/src/: CMakeLists.txt  asset.cpp
helpers/: CMakeLists.txt
helpers/example/: CMakeLists.txt
helpers/include/helpers/: KeysHelperWithFile.h  KeysHelperWithRpc.h  hs_helpers.h
helpers/src/: CMakeLists.txt  KeysHelperWithFile.cpp  KeysHelperWithRpc.cpp  hs_helpers.cpp
keys/: CMakeLists.txt
keys/cmake/: external.cmake
keys/example/: CMakeLists.txt  main.cpp
keys/include/hdac/keys/: key.h
keys/include/keys/: bitcoinaddress.h  bitcoinsecret.h  eccautoinitreleasehandler.h  hs_keys.h  hs_keys_wrapper.h  key.h  keys_global.h  keyshelper.h  keyslib.h  multisig.h  pubkey.h  rawmetadata.h  standard.h  transactions.h
keys/src/: CMakeLists.txt  bitcoinaddress.cpp  bitcoinsecret.cpp  eccautoinitreleasehandler.cpp  hs_keys.cpp  hs_keys_wrapper.cpp  key.cpp  keyslib.cpp  multisig.cpp  pubkey.cpp  rawmetadata.cpp  standard.cpp  transactions.cpp
moduleTest/: CMakeLists.txt
moduleTest/cmake/: external.cmake
moduleTest/src/: CMakeLists.txt  main.cpp
primitives/: CMakeLists.txt
primitives/example/: CMakeLists.txt  main.cpp
primitives/include/primitives/: analyzetx.h  hs_primitives.h  interpreter.h  transaction.h
primitives/src/: CMakeLists.txt  analyzetx.cpp  interpreter.cpp  transaction.cpp
protocol/: CMakeLists.txt
protocol/include/protocol/: hdacscript.h
protocol/src/: CMakeLists.txt  hdacscript.cpp
rpc/: CMakeLists.txt
rpc/cmake/: external.cmake
rpc/example/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
rpc/include/hdac/rpc/: rpccaller.h  rpccaller_global.h
rpc/include/rpc/: cif_rpccall.h  hs_rpc.h  rpcapis.h  rpccaller.h  rpccaller_global.h  rpcclient.h  rpcprotocol.h  rpcresult.h
rpc/src/: CMakeLists.txt  cif_rpccall.cpp  hs_rpc.cpp  hs_rpc.pc.in  rpcapis.cpp  rpccaller.cpp  rpcclient.cpp  rpcprotocol.cpp  rpcresult.cpp
script/: CMakeLists.txt
script/cmake/: external.cmake
script/include/hdac/script/: standard.h
script/include/script/: hdacscript.h  script.h  standard.h  utilparse.h
script/src/: CMakeLists.txt  hdacscript.cpp  script.cpp  standard.cpp  utilparse.cpp
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.html  all_19.html  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.html  classes_10.js  classes_11.html  classes_11.js  classes_12.html  classes_12.js  classes_13.html  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+163 more)
structs/: CMakeLists.txt
structs/cmake/: external.cmake
structs/include/hdac/structs/: hash.h
structs/include/structs/: amount.h  base58.h  hash.h  hashes.h  hashes_global.h  hs_structs.h  uint256.h
structs/src/: CMakeLists.txt  base58.cpp  hash.cpp  hashes.cpp  hs_structs.cpp  uint256.cpp
utils/: CMakeLists.txt
utils/cmake/: external.cmake
utils/include/hdac/utils/: base64.h  define.h  random.h  strcodeclib.h  strcodeclib_global.h  utiltime.h
utils/include/utils/: allocators.h  base64.h  define.h  random.h  serialize.h  strcodeclib_global.h  streams.h  tinyformat.h  tools.h  util.h  utility.h  utilsfront.h  utilstrencodings.h  utiltime.h  zero_after_free_allocator.h
utils/src/: CMakeLists.txt  allocators.cpp  base64.cpp  random.cpp  strcodeclib.cpp  tools.cpp  util.cpp  utility.cpp  utilsfront.cpp  utilstrencodings.cpp  utiltime.cpp
verifyTest/: CMakeLists.txt
verifyTest/src/: CMakeLists.txt  main.cpp
