cmake_minimum_required(VERSION 3.1)

project(HDAC_CRYPTO)

set(PROJECT_DESCRIPTION "hash functions such as SHA, ripemd160")
set(PROJECT_VERSION_MAJOR 0)
set(PROJECT_VERSION_MINOR 1)
set(PROJECT_VERSION_PATCH 0)
set(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

add_subdirectory(src)
